--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "framer-motion": "^11.2.10",
     "next": "14.2.4",
     "postcss": "8.4.38",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
   }
