--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "postcss": "8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "resend": "^3.3.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
   }
