Commit #7.7: sitemap config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@react-email/components": "^0.0.19",
@@ -20,6 +21,7 @@
     "eslint-config-next": "14.2.4",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
+    "next-sitemap": "^4.2.3",
     "postcss": "8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
